[package]
name = "lightswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btnify = "2.0.2"
serde = { version = "1.0.192", features = ["derive"] }
subprocess = "0.2.9"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.8"
